# ElectrodeMP

./: .gitignore  CMakeLists.txt  ElectrodeMP.zpr  README.rst
cmake/: ElectrodeMPChecker.cmake  ElectrodeMPConfigure.cmake  ElectrodeMPDependences.cmake  ElectrodeMPValidation.cmake
cmake/Modules/: FindAquila.cmake  FindCImg.cmake  FindFFmpeg.cmake  FindIconv.cmake  FindOoura.cmake  FindOpenCV.cmake  FindPortaudio.cmake  FindTaglib.cmake  FindwxThumbnail.cmake
cmake/Templates/: electrodemp_config.h.in
contrib/wxThumbnail/: CMakeLists.txt
contrib/wxThumbnail/doc/: thumbnail.h
contrib/wxThumbnail/include/wx/: thumbnail.h
contrib/wxThumbnail/source/: thumbnail.cpp
doc/: Doxyfile
include/ElectrodeMP/: Color.h  Configuracion.h  Decodificador.h  Etiquetador.h  LOG.h  Muestreador.h  Reproductor.h
player/: CMakeLists.txt  ElectrodeMP.fbp  ElectrodeMP.fbp.bak  ElectrodeMP_Editor.fbp  Main.cpp
player/include/: Dialogo.h  DialogoAyuda.h  PanelCover.h  Pantalla.h  PantallaBase.h
player/include/Widgets/: ElectrodeBoton.h  ElectrodeProgreso.h
player/resources/: Manifest.manifest  Resources.rc
player/sources/: Dialogo.cpp  DialogoAyuda.cpp  PanelCover.cpp  Pantalla.cpp  PantallaBase.cpp
player/sources/Widgets/: ElectrodeBoton.cpp  ElectrodeProgreso.cpp
sources/: CMakeLists.txt  Decodificador.cpp  Etiquetador.cpp  LOG.cpp  Muestreador.cpp  Reproductor.cpp
